--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 90s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,10 +24,18 @@
 }
 
 @keyframes App-logo-spin {
-  from {
+  0% {
     transform: rotate(0deg);
+    height: 30vmin;
   }
-  to {
+
+  50% {
+    transform: rotate(180deg);
+    height:60vmin;
+  }
+
+  100% {
     transform: rotate(360deg);
+    height:30vmin;
   }
 }
